src/index.css
@font-face {
  font-family: 'roboto';
  src: url(Roboto-Regular.ttf);
}

* {
  margin: 0;
  padding: 0;
  font-family: 'roboto';
}

nav {
  background-color: #1481eb;
  color: white;
  height: 50px;
}

.nav-bar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 10px;
}

.headers > div:first-child {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: lightgray;
  margin: 5px auto;
  height: 40px;
  width: 95%;
}

.headers > div:first-child > input {
  height: inherit;
  border: none;
  background: none;
  padding: 0 5px;
  width: 85%;
}

.headers > div:first-child > img {
  width: 25px;
}

.headers > div:last-child {
  display: grid;
  grid-template-columns: 20% 80%;
}

.headers > div:last-child > img {
  justify-self: center;
  align-self: center;
}

.headers > div:last-child > div > h1 {
  font-size: 1.8rem;
}

.plus {
  position: fixed;
  bottom: 10px;
  right: 10px;
}

.plus > button {
  background-color: #1481eb;
  border: none;
  color: white;
  font-size: 1.2rem;
  padding: 15px 20px;
  border-radius: 100px;
}

.gray-background {
  background-color: #b7c4c9;
}

.projects {
  margin-top: 10px;
  padding-top: 15px;
  display: flex;
  flex-direction: column;
  gap: 15px;
}

.projects > div {
  background-color: white;
  padding: 10px;
  width: 90%;
  margin: auto;
  border-left: solid#f0a439 10px;
}

.others {
  display: grid;
  grid-template-columns: 60% 30%;
  justify-content: center;
  gap: 15px;
  padding: 15px;
}

.others > section > div {
  background-color: white;
  padding: 15px;
  margin-top: 5px;
}

.others > section:last-child > div > div > div {
  display: flex;
}

.others > section:last-child > div,
.others > section:first-child > div {
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.others > section:last-child > div > hr,
.others > section:first-child > div > hr {
  width: 85%;
  margin: auto;
  border: none;
  height: 4px;
  background-color: lightgray;
}

.others > section:last-child > div > hr {
  width: 70%;
}

.others > section:last-child > div > div > div > div > p,
.others > section:first-child > div > div > p {
  font-size: 0.9rem;
}

.links > div > img {
  width: 20px;
}

.hide {
  display: none;
}

